2003-10-30    <jeff@mini.nerble.net>

	* gameclk.cc,actors.cc:  Check hunger every hour, instead of every
	3 hours.

	* objs/citerate.h,barge.cc: Fixed world-wrapping bug.

2003-10-26    <jeff@mini.nerble.net>

	* schedule.cc (Walk_to_schedule): Changed pathfinding so you can
	follow Patterson to his tryst.  

	* npcnear.cc: Don't call usecode for NPC's walking to schedule, so
	we don't see them snoring while they're walking.

2003-10-26  Max Horn  <max@quendi.de>
	* configure.ac: Patch #794229: OpenGL on Mac OS X
	* conf/Configuration.cc: Patch #794231: Find exult.cfg in
	  ~/Library/Preferences on Mac OS X

2003-10-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* FAQ, README, docs/xml/*: updated for beta3
	* autogen.sh: don't delete docs/xml/Makefile

2003-10-17  Ryan Nunn  <colourles@users.sourceforge.net>
	* gamemap.cc : Fixing cacheout bug that was causing the SI post 
	  Frigidazzi trial item chest problem among other possible problems.

2003-10-07  Ryan Nunn  <colourles@users.sourceforge.net>
	* usecode/intrinsics.cc : Doing what needs doing (std)

2003-09-17  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc: New opcode 0x52, CALLO, calls original
	usecode function if a version from patch replaced it.

2003-09-12  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc (Usecode_script): Finish some scripts before
	purging them.  Fixes Test-O-Love bug.

2003-09-06  Jeff Freedman  <jeff@amy.nerble.net>

	* delobjs.cc: Adding a timestamp, so objects don't get deleted
	until they've been there a few minutes.

2003-09-01  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/animate.cc,gamemap.cc:  Check for 'sfx' objs. that aren't
	animated.  Black gate and vortex cube now have sound effects.

2003-08-31  Ryan Nunn  <colourles@users.sourceforge.net>
	* imagewin/scale.cc : Fixing 2xSaI (No mouse problems, should generally
	  look better)

2003-08-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>